--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+  width: 3px;
+ 
+}
+::-webkit-scrollbar-thumb{
+    background-color: black;
+}
